# ShellSense

shellsense/: Cargo.toml  README.md
shellsense/shell/: shellsense.bash  shellsense.fish  shellsense.zsh
shellsense/src/: config.rs  daemon.rs  fuzzy.rs  importer.rs  lib.rs  main.rs  markov.rs  ranker.rs  shell.rs  storage.rs  tui.rs
shellsense/tests/: cli_runtime.rs  shell_contract.rs
